--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <p>Todos los derechos reservados, Israel Freelancer</p>
     </footer>
 
