actualizado clase servicios

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <main class="contenedor sombra">
         <h2>Mis servicios</h2>
 
-        <div class="sevicios">
+        <div class="servicios">
             <section class="servicio">
                 <h3>Diseno Web</h3>
                 <div class="iconos">
